--- a/index.html
+++ b/index.html
@@ -9,8 +9,71 @@
 <body>
   <main class="container">
     <h1>SEO ROI Calculator</h1>
-    <p>Coming soon.</p>
+
+    <form id="roiForm" novalidate>
+      <div class="grid">
+        <label>
+          <span>Current monthly visitors</span>
+          <input id="currentVisitors" type="number" inputmode="numeric" min="0" max="100000000" step="1" required />
+        </label>
+
+        <label>
+          <span>Expected traffic increase (%)</span>
+          <input id="trafficIncrease" type="number" inputmode="decimal" min="0" max="500" step="0.01" required />
+        </label>
+
+        <label>
+          <span>Conversion rate (%)</span>
+          <input id="conversionRate" type="number" inputmode="decimal" min="0" max="100" step="0.01" required />
+        </label>
+
+        <label>
+          <span>Revenue per conversion (€)</span>
+          <input id="revenuePerConversion" type="number" inputmode="decimal" min="0" max="1000000" step="0.01" required />
+        </label>
+      </div>
+
+      <div id="errors" class="errors" aria-live="polite"></div>
+
+      <div class="actions">
+        <button type="submit" class="primary">Calculate</button>
+        <button type="button" id="resetBtn">Reset</button>
+      </div>
+    </form>
+
+    <section id="results" class="results" hidden>
+      <h2>Results</h2>
+
+      <div class="cards">
+        <div class="card">
+          <h3>Current baseline</h3>
+          <p><strong>Revenue:</strong> <span id="currentRevenue">—</span></p>
+        </div>
+
+        <div class="card">
+          <h3>Projected after SEO</h3>
+          <p><strong>Visitors:</strong> <span id="projectedVisitors">—</span></p>
+          <p><strong>Conversions:</strong> <span id="projectedConversions">—</span></p>
+          <p><strong>Revenue:</strong> <span id="projectedRevenue">—</span></p>
+        </div>
+
+        <div class="card">
+          <h3>Revenue delta</h3>
+          <p><strong>Δ Revenue:</strong> <span id="revenueDelta">—</span></p>
+        </div>
+      </div>
+    </section>
+
+    <section class="note">
+      <h2>Assumptions / limitations</h2>
+      <ul>
+        <li>This is a simple linear estimate, not a guarantee.</li>
+        <li>Does not model seasonality, retention, CAC, or costs.</li>
+        <li>Visitors are rounded to whole numbers; revenue is shown in € with two decimals.</li>
+      </ul>
+    </section>
   </main>
+
   <script src="./app.js"></script>
 </body>
 </html>
