docs: add optional in-app support link

--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
         <li>Visitors are rounded to whole numbers; revenue is shown in € with two decimals.</li>
       </ul>
     </section>
+
+    <section class="support">
+      <p>
+        This tool is free. If you find it useful, you can support it here (optional):
+        <a href="https://www.buymeacoffee.com/gintsa" target="_blank" rel="noopener noreferrer">
+          Buy me a coffee
+        </a>
+      </p>
+    </section>
   </main>
 
   <script src="./app.js"></script>
