updated missing information

--- a/release.html
+++ b/release.html
@@ -23,6 +23,7 @@
     </p>
 
     <p><strong>Version/tag:</strong> v0.1.0</p>
+    <p><strong>Release date:</strong> 2026-01-08</p>
 
     <h2>What this is</h2>
     <p>
