Fix currency labels and input parsing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </label>
 
         <label>
-          <span>Revenue per conversion (€)</span>
+          <span>Revenue per conversion (EUR)</span>
           <input id="revenuePerConversion" type="number" inputmode="decimal" min="0" max="1000000" step="0.01" required />
         </label>
       </div>
@@ -47,19 +47,19 @@
       <div class="cards">
         <div class="card">
           <h3>Current baseline</h3>
-          <p><strong>Revenue:</strong> <span id="currentRevenue">—</span></p>
+          <p><strong>Revenue:</strong> <span id="currentRevenue">-</span></p>
         </div>
 
         <div class="card">
           <h3>Projected after SEO</h3>
-          <p><strong>Visitors:</strong> <span id="projectedVisitors">—</span></p>
-          <p><strong>Conversions:</strong> <span id="projectedConversions">—</span></p>
-          <p><strong>Revenue:</strong> <span id="projectedRevenue">—</span></p>
+          <p><strong>Visitors:</strong> <span id="projectedVisitors">-</span></p>
+          <p><strong>Conversions:</strong> <span id="projectedConversions">-</span></p>
+          <p><strong>Revenue:</strong> <span id="projectedRevenue">-</span></p>
         </div>
 
         <div class="card">
           <h3>Revenue delta</h3>
-          <p><strong>Δ Revenue:</strong> <span id="revenueDelta">—</span></p>
+          <p><strong>Revenue delta:</strong> <span id="revenueDelta">-</span></p>
         </div>
       </div>
     </section>
@@ -69,7 +69,7 @@
       <ul>
         <li>This is a simple linear estimate, not a guarantee.</li>
         <li>Does not model seasonality, retention, CAC, or costs.</li>
-        <li>Visitors are rounded to whole numbers; revenue is shown in € with two decimals.</li>
+        <li>Visitors are rounded to whole numbers; revenue is shown in EUR with two decimals.</li>
       </ul>
     </section>
 
