--- a/release.html
+++ b/release.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SEO ROI Calculator — Release</title>
+  <title>SEO ROI Calculator - Release</title>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <main class="container">
-    <h1>SEO ROI Calculator — Level 1 Release</h1>
+    <h1>SEO ROI Calculator - Level 1 Release</h1>
 
     <p><strong>Live app:</strong>
       <a href="https://gintsa.github.io/seo-roi-calculator/" target="_blank" rel="noopener noreferrer">
@@ -36,7 +36,7 @@
       <li>Enter current monthly visitors.</li>
       <li>Enter expected traffic increase (%).</li>
       <li>Enter conversion rate (%).</li>
-      <li>Enter revenue per conversion (€).</li>
+      <li>Enter revenue per conversion (EUR).</li>
       <li>Click <strong>Calculate</strong>.</li>
     </ol>
 
