--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
         <label>
           <span>Expected traffic increase (%)</span>
-          <input id="trafficIncrease" type="number" inputmode="decimal" min="0" max="500" step="0.01" required />
+          <input id="trafficIncrease" type="text" inputmode="decimal" required />
         </label>
 
         <label>
           <span>Conversion rate (%)</span>
-          <input id="conversionRate" type="number" inputmode="decimal" min="0" max="100" step="0.01" required />
+          <input id="conversionRate" type="text" inputmode="decimal" required />
         </label>
 
         <label>
           <span>Revenue per conversion (EUR)</span>
-          <input id="revenuePerConversion" type="number" inputmode="decimal" min="0" max="1000000" step="0.01" required />
+          <input id="revenuePerConversion" type="text" inputmode="decimal" required />
         </label>
       </div>
 
