Refactor calculator config and naming

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
         <label>
           <span>Expected traffic increase (%)</span>
-          <input id="trafficIncrease" type="text" inputmode="decimal" required />
+          <input id="trafficIncreasePct" type="text" inputmode="decimal" required />
         </label>
 
         <label>
           <span>Conversion rate (%)</span>
-          <input id="conversionRate" type="text" inputmode="decimal" required />
+          <input id="conversionRatePct" type="text" inputmode="decimal" required />
         </label>
 
         <label>
