Improve validation messaging and field errors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </label>
       </div>
 
-      <div id="errors" class="errors" aria-live="polite"></div>
+      <div id="errors" class="errors" aria-live="polite" role="alert"></div>
 
       <div class="actions">
         <button type="submit" class="primary">Calculate</button>
