--- a/index.html
+++ b/index.html
@@ -43,30 +43,29 @@
         <button type="submit" class="primary">Calculate</button>
         <button type="button" id="resetBtn">Reset</button>
       </div>
+
+      <section id="results" class="results" hidden>
+        <h2>Results</h2>
+
+        <div class="cards">
+          <div class="card">
+            <p><strong>Baseline monthly revenue:</strong> <span id="currentRevenue">-</span></p>
+          </div>
+
+          <div class="card">
+            <p><strong>Projected monthly revenue:</strong> <span id="projectedRevenue">-</span></p>
+            <p><strong>Visitors:</strong> <span id="projectedVisitors">-</span></p>
+            <p><strong>Conversions:</strong> <span id="projectedConversions">-</span></p>
+          </div>
+
+          <div class="card">
+            <p><strong>Monthly revenue delta:</strong> <span id="revenueDelta">-</span></p>
+          </div>
+        </div>
+
+        <p class="results-note"><strong>Calculated from:</strong> Based on your inputs above.</p>
+      </section>
     </form>
-
-    <section id="results" class="results" hidden>
-      <h2>Results</h2>
-
-      <div class="cards">
-        <div class="card">
-          <h3>Current baseline</h3>
-          <p><strong>Revenue:</strong> <span id="currentRevenue">-</span></p>
-        </div>
-
-        <div class="card">
-          <h3>Projected after SEO</h3>
-          <p><strong>Visitors:</strong> <span id="projectedVisitors">-</span></p>
-          <p><strong>Conversions:</strong> <span id="projectedConversions">-</span></p>
-          <p><strong>Revenue:</strong> <span id="projectedRevenue">-</span></p>
-        </div>
-
-        <div class="card">
-          <h3>Revenue delta</h3>
-          <p><strong>Revenue delta:</strong> <span id="revenueDelta">-</span></p>
-        </div>
-      </div>
-    </section>
 
     <section class="note">
       <h2>Assumptions / limitations</h2>
