Tweak support section and canonical link

--- a/release.html
+++ b/release.html
@@ -50,8 +50,8 @@
     <h2>Monetization</h2>
     <p>
       This tool is free. If you find it useful, you can support it here (optional):
-      <a href="https://www.buymeacoffee.com/gintsa" target="_blank" rel="noopener noreferrer">
-        https://www.buymeacoffee.com/gintsa
+      <a href="https://buymeacoffee.com/gintsa" target="_blank" rel="noopener noreferrer">
+        https://buymeacoffee.com/gintsa
       </a>
     </p>
 
