--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section class="support">
       <p>
         This tool is free. If you find it useful, you can support it here (optional):
-        <a href="https://www.buymeacoffee.com/gintsa" target="_blank" rel="noopener noreferrer">
+        <a href="https://buymeacoffee.com/gintsa" target="_blank" rel="noopener noreferrer">
           Buy me a coffee
         </a>
       </p>
