Polish release docs and quick test

--- a/release.html
+++ b/release.html
@@ -40,6 +40,13 @@
       <li>Click <strong>Calculate</strong>.</li>
     </ol>
 
+    <h2>Quick test example</h2>
+    <p>
+      Inputs: visitors 10,000; traffic increase 20%; conversion rate 2.5; revenue per conversion 50.
+      Expected: baseline revenue, projected revenue, and delta appear; visitors/conversions are whole numbers,
+      revenue is shown in EUR with two decimals.
+    </p>
+
     <h2>Assumptions / limitations</h2>
     <ul>
       <li>Simple linear estimate, not a guarantee.</li>
