Remove evidence media

--- a/release.html
+++ b/release.html
@@ -63,12 +63,7 @@
     </p>
 
     <h2>Evidence</h2>
-    <ul>
-      <li><a href="./EVIDENCE/screenshot-01.png" target="_blank" rel="noopener noreferrer">screenshot-01.png</a></li>
-      <li><a href="./EVIDENCE/screenshot-02.png" target="_blank" rel="noopener noreferrer">screenshot-02.png</a></li>
-      <li><a href="./EVIDENCE/monetization-proof.png" target="_blank" rel="noopener noreferrer">monetization-proof.png</a></li>
-      <li><a href="./EVIDENCE/demo.mp4" target="_blank" rel="noopener noreferrer">demo.mp4</a></li>
-    </ul>
+    <p>Evidence files removed.</p>
 
     <h2>AI usage</h2>
     <p>
